--- a/.husky/lint-staged.config.json
+++ b/.husky/lint-staged.config.json
@@ -1,8 +1,3 @@
 {
-  "*.{js,jsx,ts,tsx,json}": [
-    "npm run staged:prettier:fix",
-    "npm run staged:prettier:check",
-    "npm run staged:lint:fix",
-    "npm run staged:lint:check"
-  ]
+  "*.{js,jsx,ts,tsx,json}": ["prettier --write", "eslint --fix"]
 }
