--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "s-llm",
+  "name": "s-utils-llm",
   "version": "0.0.0-development",
-  "description": "s-llm is utils for working with LLM models",
+  "description": "s-utils-llm is utils for working with LLM models",
   "main": "./lib/index.js",
   "files": [
     "lib/**/*",
@@ -42,7 +42,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/SebastianWesolowski/s-llm.git"
+    "url": "https://github.com/SebastianWesolowski/s-utils-llm.git"
   },
   "license": "MIT",
   "author": {
@@ -65,9 +65,9 @@
     "codecov"
   ],
   "bugs": {
-    "url": "https://github.com/SebastianWesolowski/s-llm/issues"
+    "url": "https://github.com/SebastianWesolowski/s-utils-llm/issues"
   },
-  "homepage": "https://github.com/SebastianWesolowski/s-llm#readme",
+  "homepage": "https://github.com/SebastianWesolowski/s-utils-llm#readme",
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
@@ -86,6 +86,7 @@
     "@semantic-release/release-notes-generator": "^14.0.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.8.7",
+    "@types/node-fetch": "^2.6.12",
     "@types/sharp": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.54.1",
@@ -94,6 +95,8 @@
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cross-env": "^7.0.3",
     "czg": "^1.9.4",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.3.0",
     "eslint": "8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -103,10 +106,9 @@
     "glob": "^10.3.10",
     "handlebars-helpers": "^0.10.0",
     "husky": "^9.0.0",
-    "dotenv": "^16.4.5",
-    "dotenv-cli": "^7.3.0",
     "jest": "^29.7.0",
     "lint-staged": "^13.2.1",
+    "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "rollup": "^4.13.0",
